update all the versions